# git_test

./: .gitignore  README.md  build_all.sh
algo/: algos.hpp  areaInvade.cpp  bmnn_utils.h  fire.cpp  leave.cpp  personNumber.cpp  utils.hpp  yolov5.hpp
algorithms/: SyncQueue.hpp  areaInvade.cpp  fire.cpp  helmet.cpp  judgements.cpp  judgements.hpp  sleep.cpp  smog.cpp  smoke.cpp  xf.cpp  yolov5.cpp
main-service/: CMakeLists.txt  ClientsComponent.hpp  Constants.hpp  DatabaseComponent.hpp  Runner.cpp  Runner.hpp  Server.cpp  ServerComponent.hpp  SwaggerComponent.hpp
main-service/controller/: TaskController.hpp
main-service/db/: TaskDb.hpp
main-service/dto/: StatusDto.hpp  TaskDto.hpp
main-service/service/: TaskService.hpp
sql/: project.sql
task-service/: CMakeLists.txt  Constants.hpp  Runner.cpp  Runner.hpp  Server.cpp  ServerComponent.hpp  SwaggerComponent.hpp  globals.cpp  globals.hpp
task-service/controller/: AlgoController.hpp  TaskController.hpp  WarningController.hpp
task-service/db/: AlgoDb.hpp  TaskDb.hpp  WarningDb.hpp
task-service/dto/: AlgoDto.hpp  PageDto.hpp  StatusDto.hpp  TaskDto.hpp  WarningDto.hpp
task-service/service/: AlgoService.cpp  AlgoService.hpp  WarningService.cpp  WarningService.hpp
task-service/threadPool/: Makefile  ThreadPool.hpp  example.cpp  example2.cpp
utils/: Utils.cpp  Utils.hpp  parseMulti.cpp  parseMulti.hpp
